--- a/web/assets/styles/scss/variable.scss
+++ b/web/assets/styles/scss/variable.scss
@@ -7,7 +7,7 @@ $success: #5FB584;
 $danger: #CB0000;
 $warning: #E5E505;
 $dark: #1E1E1E;
-$grey: #b8c2cc;
+$grey: #F3F3F3;
 
 $grey-light: #dae1e7;
 $white: #fff;
