--- a/web/assets/styles/scss/style.scss
+++ b/web/assets/styles/scss/style.scss
@@ -3,3 +3,12 @@
 .color-primary {
   color: $primary;
 }
+
+.text-body2 {
+  font-size: $body2;
+}
+
+.text-error {
+  font-size: 0.75rem;
+  color: $danger;
+}
