[+] add function CRUD on Jenis Pengaduan [+] bug fixing left panel

--- a/web/assets/styles/scss/base.scss
+++ b/web/assets/styles/scss/base.scss
@@ -9,6 +9,10 @@
   scrollbar-color: #eceff1 white;
 }
 
+.dx-widget {
+  font-family: 'Roboto', sans-serif !important;
+}
+
 html,
 body {
   padding: 0;
