--- a/web/assets/styles/scss/variable.scss
+++ b/web/assets/styles/scss/variable.scss
@@ -12,7 +12,7 @@ $grey: #F3F3F3;
 $grey-light: #dae1e7;
 $white: #fff;
 $black: #16191C;
-$color-background: #60B785;
+$color-background: #ECEFF1;
 
 $green-primary: #029141;
 $green-secondary: #40AC6E;
