--- a/web/assets/styles/scss/style.scss
+++ b/web/assets/styles/scss/style.scss
@@ -12,3 +12,15 @@
   font-size: 0.75rem;
   color: $danger;
 }
+
+.dx-datagrid-header-panel, .dx-toolbar .dx-toolbar-items-container {
+  background: $color-background;
+}
+
+.dx-datagrid {
+  background-color: #FFFFFF !important;
+}
+
+.dx-datagrid-headers {
+  font-weight: 600 !important;
+}
