[+] fixing pengaduan [+] fixing kecamatan [+] fixing integrate with google maps

--- a/web/assets/styles/scss/extraComponents/c-input.scss
+++ b/web/assets/styles/scss/extraComponents/c-input.scss
@@ -2,5 +2,6 @@
 
 .input-primary.css-195vtln-className:focus {
     border-color: $primary;
-    box-shadow: 0 0 0 1px $primary
+    box-shadow: 0 0 0 1px $primary;
+    border-radius: 6px !important;
 }
